avances con el proyect

--- a/src/components/NavBar/Navbar.style.css
+++ b/src/components/NavBar/Navbar.style.css
@@ -20,3 +20,12 @@
     color: black;
     padding: 0px 15px;
 }
+
+.Logo-Name{
+    display: flex;
+}
+
+.logo-nike{
+    height: 50px;
+    padding: 0px 5px;
+}
