--- a/src/components/NavBar/Navbar.style.css
+++ b/src/components/NavBar/Navbar.style.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     padding: 10px 20px;
-    background-color: aqua;
+    background-color: rgb(76, 145, 27);
 }
 
 .Title{
