--- a/src/components/NavBar/Navbar.style.css
+++ b/src/components/NavBar/Navbar.style.css
@@ -7,33 +7,17 @@
     background-color: rgb(45, 136, 152);
 }
 
-.Title{
-    font-size: 2em;
-    
-}
-
-.cart{
-    font-size: 35px;
-}
-
-.nav-linkk{
-    font-size: 25px;
-    text-decoration: none;
-    color: black;
-    padding: 0px 15px;
-    font-family: 'Oswald', sans-serif;
-}
-
-.Logo-Name{
-    display: flex;
-}
-
 .logo-nike{
     height: 50px;
     padding: 0px 5px;
 }
 
 .links{
-    display: flex;
+    font-size: 1.2em;
+    text-decoration: none;
 }
 
+.links ul{
+    display: flex;
+    gap: 30px;
+}
