--- a/src/components/NavBar/Navbar.module.css
+++ b/src/components/NavBar/Navbar.module.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
 
-.containernavbar{
+.containernavbar {
   height: 10vh;
   display: flex;
   justify-content: space-between;
@@ -19,7 +19,7 @@ a {
   font-weight: bold;
 }
 
-.links{
+.links {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -28,23 +28,36 @@ a {
 
 .links a {
   padding: 10px 20px;
-  color: #7F669D;
+  color: #7f669d;
   width: 100px;
   display: flex;
   justify-content: center;
   border-radius: 10px;
 }
 
-.active{
+.active {
   background-color: rgb(111, 38, 38);
 }
 
-.noActive{
+.noActive {
   background-color: rgb(232, 255, 196);
 }
 
-.navcart{
+.navcart {
   display: flex;
   align-items: baseline;
-  gap: 1rem;
+  gap: 1.4rem;
+}
+
+.buttonI {
+  font-size: 18px;
+  padding: 0px 2px;
+  color: inherit;
+  opacity: 0.8;
+  color: rgb(255, 255, 255);
+}
+.buttonI:hover{
+  border-bottom: 2px solid;
+ font-weight: 700;
+ color: rgb(80, 97, 158);
 }
